examples/type_system/failing/69_hm_typed_let_infix_compile_mismatch.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/69_hm_typed_let_infix_compile_mismatch.flx
// error[E300]: Annotation Type Mismatch
//
// The value of `y` does not match its type annotation.
//
//   examples/type_system/failing/69_hm_typed_let_infix_compile_mismatch.flx:35:18
//    |
// 35 |     let y: Int = x + 1
//    |                  ^^^^^
//    |                  ----- this value has type `String`
//
//    |            --- but `y` was annotated as `Int`
//
// Note:
//   annotated type: Int
//   value type: String
//
// Help:
//   Change `y` to a `Int` value or update the annotation.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E300

// HM hardening: known invalid infix in typed let should fail at compile time.

fn old(v) {
    v
}

fn main() {
    let x = old("oops")
    let y: Int = x + 1
    y
}
